# ChecklistTools

./: .gitignore  CHANGELOG.md  LICENSE  README.rst  helpers.py  pyproject.toml  setup.py  validate_samples.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/checklisttools/: __init__.py  checklistlib.py  generate_template.py  helpers.py  validate.py
